# mail-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
mail_pipeline/: __init__.py  __main__.py  api.py  auth.py  cli.py  extract.py  flow.py  mbsync.py  metrics.py  notmuch.py  prefect_client.py
tests/: test_api.py  test_auth.py  test_extract.py  test_flow.py  test_mbsync.py  test_notmuch.py
