[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "prefect>=3.7,<4",
    "flask>=3.0",
    "waitress>=3.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mail_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
reportMissingImports = false
